--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>About FOSSASIA | Asia's Open Technology Organization for Open Source Software, Open Hardware, Open Design, Open Data, Open Knowledge</title>
+        <title>About FOSSASIA | FOSSASIA為在亞洲推廣「開放原始碼軟體」、「開放硬體」、「開放設計」、「開放資料」以及「開放知識」的開放科技組織</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="About FOSSASIA - Developing Open Source Software and Hardware to improve people's lives. Solutions for Event Management, Artificial Intelligence, Big Data, Design Thinking and Free Knowledge Tools. FOSSASIA is Asia's Premier Open Technology Organization.">
         <meta name="keywords" content="About FOSSASIA, FOSS, Free and Open Source Software, Asia">
@@ -192,9 +192,9 @@
 							<i class="icon pe-7s-global"></i>
 							<i class="icon pe-7s-like icon-large"></i>
 							<i class="icon pe-7s-sun icon-large"></i>
-							<h1 class="text-white">A little more about FOSSASIA</h1>
+							<h1 class="text-white">關於FOSSASIA的小故事：</h1>
 							<p class="lead text-white">
-								FOSSASIA is an organization developing software applications for social change using a wide-range of technologies. It was established 2009. Projects range from Free and Open Source software, to design, graphics and hardware. We also organize and participate in conferences, meetups and code camps. The annual FOSSASIA OpenTechSummit is one of the largest gatherings of developers in Asia and took place in Vietnam, Cambodia and Singapore. Please join us and start contributing to our projects on <a href="https://github.com/fossasia/">GitHub.</a>
+									FOSSASIA是一個利用多元廣泛的技術，致力於開發能促進社會轉型的軟體應用程式的組織。FOSSASIA成立於2009年，我們的專案範圍包含自由軟體、開放原始碼軟體、設計、圖形、以及硬體。FOSSASIA也組織並參與多個聚會、活動、大型會議及程式營。每年舉辦的FOSSASIA Summit以及OpenTechSummit為亞洲區知名的大型開發者聚會，舉辦地點包含越南、柬埔寨和新加坡。請關注我們在 <a href="https://github.com/fossasia/">GitHub.</a> 分享的專案，歡迎加入並開始一起貢獻。
 							</p>
 						</div>
 					</div>
@@ -208,29 +208,29 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1>Our Background and Mission<br></h1>
+							<h1>我們的背景及任務<br></h1>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-loop icon-large"></i>
-								<h3>What We Do<br></h3>
-								<p class="lead">We bring amazing people together to create, develop, design and make things with Open Technologies - hardware and software - and share our work for the benefit of all. We organize Open Tech summits, science hack labs, meetups and coding programs with developers, designers and contributors.</p>
+								<h3>FOSSASIA做了什麼？<br></h3>
+								<p class="lead">FOSSASIA凝聚了許多非常出色的人們，大家一起創造、開發、設計，並使用開放技術科技（包含硬體及軟體）製作許多事物，我們也將成品分享給大家。FOSSASIA為了軟體、硬體開發者、設計師及貢獻者們，組織了開放科技高峰會、科學黑客實驗室，以及許多編寫程式的聚會。</p>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-share icon-large"></i>
-								<h3>Why We Do It<br></h3>
-								<p class="lead">Our main goal is to improve people's lives by sharing Open Tech solutions. We want to see that information technology and science has a positive impact on our society. We believe this can be achieved if people have access to digital tools and knowledge. Open Technologies offer free and open access. At FOSSASIA we are excited how sharing is possible on all layers from software, hardware and design to data and knowledge and we work hard to enable people to participate in the sharing society, expand knowledge, tools and opportunities, freedom of communication and expression for everyone.</p>
+								<h3>FOSSASIA為什麼要這麼做？<br></h3>
+								<p class="lead">FOSSASIA的目標為透過「分享開放科技」的方法來增進人們生活，我們想看到資訊科技和科學是能夠給社會帶來正面的影響，只要大家有機會接觸數位工具及相關知識，我們相信這個目標絕對能夠實現。在FOSSASIA，我們確實知道分享是能夠正向地影響各個層面，從軟體、硬體、資料設計以及知識。我們努力的鼓勵每一個人來參與分享社會、來擴展知識、增加技能與機會、並擁有溝通及表達意見的自由。</p>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-users icon-large"></i>
-								<h3>Who We Are<br></h3>
-								<p class="lead">We are an organization of people from all continents based in Asia. We want to see progress and improvements of people's lives in Asia and everywhere. We are developers, designers, event organizers and contributors who want to learn and share ideas, create and make digital software tools and hardware, that benefit people around the world. FOSSASIA was founded in 2009 by <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> and <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>.</p>
+								<h3>FOSSASIA是誰？<br></h3>
+								<p class="lead">FOSSASIA組織中的成員來自亞洲中許多不同國家。我們想看到在亞洲以及每一個角落的人們都有進步及改善。我們是一群希望透過學習、分享各自的想法、創造並製作數位軟體或硬體的工具來造福人群的開發者、設計師、活動主辦人及貢獻者。FOSSASIA於2009年由 <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> 及 <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>.</p>創辦。</p>
 							</div>
 						</div>
 					</div>
