--- a/about/index.html
+++ b/about/index.html
@@ -230,7 +230,7 @@
 							<div class="topic">
 								<i class="pe-7s-users icon-large"></i>
 								<h3>FOSSASIA是誰？<br></h3>
-								<p class="lead">FOSSASIA組織中的成員來自亞洲中許多不同國家。我們想看到在亞洲以及每一個角落的人們都有進步及改善。我們是一群希望透過學習、分享各自的想法、創造並製作數位軟體或硬體的工具來造福人群的開發者、設計師、活動主辦人及貢獻者。FOSSASIA於2009年由 <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> 及 <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>.</p>創辦。</p>
+								<p class="lead">FOSSASIA組織中的成員來自亞洲中許多不同國家。我們想看到在亞洲以及每一個角落的人們都有進步及改善。我們是一群希望透過學習、分享各自的想法、創造並製作數位軟體或硬體的工具來造福人群的開發者、設計師、活動主辦人及貢獻者。FOSSASIA於2009年由 <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> 及 <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>創辦。</p>
 							</div>
 						</div>
 					</div>
@@ -249,9 +249,9 @@
 					<div class="row">
 						<div class="col-md-11">
 							<p>
-								The best way to stay up to date on FOSSASIA activities is to subscribe to the <a href="#subscribe" class="inner-link" target="_self">newsletter</a>. If you are interested in communication within the community please get in touch on our&nbsp;<a href="http://groups.google.com/group/fossasia">mailing list</a>. Or, check out more ways to get in touch with the FOSSASIA core team and our projects on our <a href="http://blog.fossasia.org/contact">list of contact points</a></p>
+								最好關注FOSSASIA的方法是，請訂閱 <a href="#subscribe" class="inner-link" target="_self">newsletter</a> 。如果想直接和社群的人們溝通的話，請關注FOSSASIA在google group的&nbsp;<a href="http://groups.google.com/group/fossasia">mailing list</a>。或者，請利用<a href="http://blog.fossasia.org/contact">list of contact points</a> 的方式來和FOSSASIA的核心成員們及相關專案負責人或單位保持聯繫。</p>
 							<p>
-								We are looking particularly for developers who are interested to contribute to our existing projects and develop new application ideas. Many of our projects are on GitHub in the &nbsp;<a href="http://github.com/fossasia">FOSSASIA repository</a> or on the repo of our <a href="http://github.com/loklak">project loklak</a>. Please check out the code and start contributing.<br></div></div></p>
+								我們特別希望尋找對於我們的專案有興趣並能夠貢獻，或是有新應用想法的開發者們。我們在Github上有許多專案：&nbsp;<a href="http://github.com/fossasia">FOSSASIA repository</a>，麻煩請關注並試著開始貢獻。</p>
 							<a href="http://blog.fossasia.org/contact" class="btn" target="_self">Contact List</a><a href="#subscribe" class="btn inner-link" target="_self">Newsletter</a>
 							<a href="http://groups.google.com/group/fossasia" class="btn btn-hollow" target="_self">Mailing List</a>
 						</div>
@@ -263,13 +263,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1>FOSSASIA Events</h1>
+							<h1>FOSSASIA 的活動</h1>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-4 col-md-11">
 							<div class="faq-item">
-								<p><span>Since 2009 the&nbsp;</span><a href="http://2017.fossasia.org/">FOSSASIA OpenTechSummit</a><span>&nbsp;takes place in different countries across Asia. Events in&nbsp;</span><a href="http://2014.fossasia.org/" target="_self">Cambodia</a><span>,&nbsp;</span><a href="http://2010.fossasia.org/" target="_self">Ho Chi Minh City</a><span>&nbsp;(Saigon)&nbsp;</span><a href="http://2011.fossasia.org/" target="_self">Vietnam</a><span>&nbsp;and&nbsp;</span><a href="http://2016.fossasia.org/">Singapore</a><span>&nbsp;attracted up to 3000 attendees.&nbsp;At many events we achieve a balanced gender distribution where half of all participants are women.&nbsp;Other events with links to FOSSASIA are the&nbsp;</span><a href="http://wiki.debian.org/DebianVietnam/MiniDebConf2010">Mini-Debconf Vietnam</a><span>,&nbsp;</span><a href="http://libregraphicsmeeting.org/">LGM</a><span>,&nbsp;</span><a href="http://gnome.asia/">GNOME.Asia</a><span>,&nbsp;</span><a href="http://hackerspace.sg/">Hackerspace</a><span>&nbsp;Meetings in Singapore, LUG meetups in China,&nbsp;</span><a href="http://typo3cambodia.org/">TYPO3</a><span>&nbsp;events in Phnom Penh,&nbsp;</span><a href="http://opendesign.asia/">OpenDesign.Asia Weeks</a><span>, the Chaos Communication Congress, the Berlin&nbsp;</span><a href="http://opentechsummit.net/">OpenTechSummit</a><span>&nbsp;series and many others.</span></p>
+								<p><span>自從2009年開始，&nbsp;</span><a href="http://2018.fossasia.org/">FOSSASIA Summit</a><span>&nbsp;在亞洲許多不同城市舉辦。歷年舉辦城市有&nbsp;</span><a href="http://2014.fossasia.org/" target="_self">Cambodia</a><span>,&nbsp;</span><a href="http://2010.fossasia.org/" target="_self">Ho Chi Minh City</a><span>&nbsp;(Saigon)&nbsp;</span><a href="http://2011.fossasia.org/" target="_self">Vietnam</a><span>&nbsp;and&nbsp;</span><a href="http://2016.fossasia.org/">Singapore</a><span>&nbsp;等地方，總共有超過3000人以上參與。在FOSSASIA許多活動中，我們致力也達成性別的平等，幾乎半數的參加者為女性。而其他和FOSSASIA相關的活動，如&nbsp;</span><a href="http://wiki.debian.org/DebianVietnam/MiniDebConf2010">Mini-Debconf Vietnam</a><span>,&nbsp;&nbsp;</span><a href="http://libregraphicsmeeting.org/">LGM</a><span>,&nbsp;</span><a href="http://gnome.asia/">GNOME.Asia</a><span>,&nbsp;</span><a href="http://hackerspace.sg/">Hackerspace</a><span>&nbsp;在新加坡的Meetings in Singapore, 中國的LUG meetups in China,&nbsp; 在柬埔寨首都金邊的活動：<a href="http://typo3cambodia.org/">TYPO3</a><span>&nbsp;&nbsp;</span>。還有<a href="http://opendesign.asia/">OpenDesign.Asia Weeks</a><span>, the Chaos Communication Congress, the Berlin&nbsp;</span><a href="http://opentechsummit.net/">OpenTechSummit</a><span>&nbsp;系列.....等等</span></p>
 							</div>
 						</div>
 					</div>
