--- a/index.html
+++ b/index.html
@@ -411,14 +411,14 @@
 						</div>
 
 						<div class="col-sm-6 col-md-5">
-							<h1>FOSSASIA Labs<div>Software and Hardware Projects</div></h1>
+							<h1>FOSSASIA Labs<div>軟體和硬體的專案</div></h1>
 
 							<p class="lead">
-								FOSSASIA develops software and hardware and cooperates with Open Tech projects. Please check out our Github and FOSSASIA Labs.
+								FOSSASIA利用「開放科技」的專案來開發軟體和硬體。請專注我們FOSSASIA Labs計畫，以及在Github上的專案，
 							</p>
 
-							<a href="http://github.com/fossasia" class="btn" target="_self"></i>Contribute on Github</a>
-							<a href="./donate/" class="btn btn-hollow" target="_self">Donate Now</a>
+							<a href="http://github.com/fossasia" class="btn" target="_self"></i>開始在Github貢獻</a>
+							<a href="./donate/" class="btn btn-hollow" target="_self">現在！贊助</a>
 						</div>
 
 					</div>
@@ -432,29 +432,29 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1>Our Background and Mission<br></h1>
+							<h1>我們的背景及任務<br></h1>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-loop icon-large"></i>
-								<h3>What We Do<br></h3>
-								<p class="lead">We bring amazing people together to create, develop, design and make things with Open Technologies - hardware and software - and share our work for the benefit of all. We organize Open Tech summits, science hack labs, meetups and coding programs with developers, designers and contributors.</p>
+								<h3>FOSSASIA做了什麼？<br></h3>
+								<p class="lead">FOSSASIA凝聚了許多非常出色的人們，大家一起創造、開發、設計，並使用開放技術科技（包含硬體及軟體）製作許多事物，我們也將成品分享給大家。FOSSASIA為了軟體、硬體開發者、設計師及貢獻者們，組織了開放科技高峰會、科學黑客實驗室，以及許多編寫程式的聚會。</p>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-share icon-large"></i>
-								<h3>Why We Do It<br></h3>
-								<p class="lead">Our main goal is to improve people's lives by sharing Open Tech solutions. We want to see that information technology and science has a positive impact on our society. We believe this can be achieved if people have access to digital tools and knowledge. Open Technologies offer free and open access. At FOSSASIA we are excited how sharing is possible on all layers from software, hardware and design to data and knowledge and we work hard to enable people to participate in the sharing society, expand knowledge, tools and opportunities, freedom of communication and expression for everyone.</p>
+								<h3>FOSSASIA為什麼要這麼做？<br></h3>
+								<p class="lead">FOSSASIA的目標為透過「分享開放科技」的方法來增進人們生活，我們想看到資訊科技和科學是能夠給社會帶來正面的影響，只要大家有機會接觸數位工具及相關知識，我們相信這個目標絕對能夠實現。在FOSSASIA，我們確實知道分享是能夠正向地影響各個層面，從軟體、硬體、資料設計以及知識。我們努力的鼓勵每一個人來參與分享社會、來擴展知識、增加技能與機會、並擁有溝通及表達意見的自由。</p>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-4">
 							<div class="topic">
 								<i class="pe-7s-users icon-large"></i>
-								<h3>Who We Are<br></h3>
-								<p class="lead">We are an organization of people from all continents based in Asia. We want to see progress and improvements of people's lives in Asia and everywhere. We are developers, designers, event organizers and contributors who want to learn and share ideas, create and make digital software tools and hardware, that benefit people around the world. FOSSASIA was founded in 2009 by <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> and <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>.</p>
+								<h3>FOSSASIA是誰？<br></h3>
+								<p class="lead">FOSSASIA組織中的成員來自亞洲中許多不同國家。我們想看到在亞洲以及每一個角落的人們都有進步及改善。我們是一群希望透過學習、分享各自的想法、創造並製作數位軟體或硬體的工具來造福人群的開發者、設計師、活動主辦人及貢獻者。FOSSASIA於2009年由 <a href="https://hpdang.com" target="_self">Hong Phuc Dang</a> 及 <a href="http://twitter.com/mariobehling" target="_self">Mario Behling</a>創辦。</p>
 							</div>
 						</div>
 					</div>
@@ -467,7 +467,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1>We need your support to continue our work for you. We need funds for developing free and open source software and hardware, sharing of open knowledge, organizing events and meetups and to keep working with the community.<br></h1>
+							<h1>我們需要你們持續的支持來協助我們的工作。FOSSASIA需要資金來維持開發自由、開放原始碼的軟體和硬體，並分享公開的知識，或組織活動和聚會，以及持續經營這個社群。<br></h1>
 						</div>
 					</div>
 					<div class="row">
