--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<img alt="FOSSASIA" class="logo" src="img/fossasia-squarewhite-path.png">
-									<h1 class="large-h1 text-white">Bringing together an inspiring community across borders and ages to form a better future with Open Technologies and ICT</h1>
+									<h1 class="large-h1 text-white">用「開放科技」和「資訊及通訊科技」來帶給人們超越疆界及年齡限制的啟發性社群</h1>
 								</div>
 							</div>
 						</div>
@@ -206,7 +206,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<img alt="FOSSASIA" class="logo" src="img/fossasia-squarewhite-path.png">
-									<h1 class="large-h1 text-white">Organizing training programs and coding meet ups for thousands of young kids, Open Tech developers and designers every year</h1>
+									<h1 class="large-h1 text-white">為了數千位兒童及開放科技的開發者們，每年組織許多訓練的計劃，編寫程式的聚會，</h1>
 
 								</div>
 
@@ -222,7 +222,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<img alt="FOSSASIA" class="logo" src="img/fossasia-squarewhite-path.png">
-									<h1 class="large-h1 text-white">Developing Free and Open Source Software and Hardware and cooperating with the most forward thinking Open Tech innovators and companies of the planet</h1>
+									<h1 class="large-h1 text-white">持續開發自由的開放原始碼軟體及硬體，以及持續和地球上最具有前瞻思想的開放科技的創新者們及公司們協同合作</h1>
 								</div>
 							</div>
 						</div>
@@ -234,7 +234,7 @@
 							<div class="row">
 								<div class="col-sm-6 col-md-7">
 									<img alt="FOSSASIA" class="logo" src="img/fossasia-squarewhite-path.png">
-									<h1 class="large-h1 text-white">Connecting Open Tech Communities across Asia with Developers, Designers and Makers from Around the World in the FOSSASIA Network</h1>
+									<h1 class="large-h1 text-white">連接亞洲內各個開放科技社群，開發者們、設計師們及自造者們，並透過FOSSASIA網絡來面向全世界</h1>
 								</div>
 							</div>
 						</div>
