--- a/index.html
+++ b/index.html
@@ -66,53 +66,53 @@
 
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-										<li class="has-dropdown"><a href="./about">About</a>
+										<li class="has-dropdown"><a href="./about">關於</a>
 										<ul class="nav-dropdown" style="min-height: 100px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
-											<li><a target="_self" href="./about#background">Background & Mission</a></li>
-											<li><a target="_self" href="./licenses">Licenses</a></li>
-											<li><a target="_self" href="./team">Team</a></li>
+											<li><a target="_self" href="./about#background">背景 & 任務</a></li>
+											<li><a target="_self" href="./licenses">授權</a></li>
+											<li><a target="_self" href="./team">團隊</a></li>
 										</ul>
-									<li class="has-dropdown"><a href="./apply.html">Apply</a>
+									<li class="has-dropdown"><a href="./apply.html">申請</a>
 										<ul class="nav-dropdown" style="min-height: 175px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
-											<li><a target="_self" href="/apply.html">Programs and Guidelines</a></li>
-											<li><a target="_self" href="/apply-students">University Student Programs/Internships</a></li>
-											<li><a target="_self" href="/apply-pupils">Pre-University Student Programs/Internships</a></li>
-											<li><a target="_self" href="http://codeheat.org">Code Heat Contest</a></li>
-											<li><a target="_self" href="/adp">Advanced Developer Program</a></li>
+											<li><a target="_self" href="/apply.html">計劃 及 方針</a></li>
+											<li><a target="_self" href="/apply-students">大學學生計畫 / 實習</a></li>
+											<li><a target="_self" href="/apply-pupils">預備大學學生計畫 / 實習</a></li>
+											<li><a target="_self" href="http://codeheat.org">Code Heat 競賽</a></li>
+											<li><a target="_self" href="/adp">進階開發者計畫</a></li>
 										</ul>
-									<li class="has-dropdown"><a href="http://labs.fossasia.org/#projects">Projects</a>
+									<li class="has-dropdown"><a href="http://labs.fossasia.org/#projects">計畫</a>
                					     <ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
-											<li><a target="_self" href="https://github.com/fossasia">Contribute on Github</a></li>
-											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">Project Ideas</a></li>
-											<li><a target="_self" href="http://labs.fossasia.org" target="_self">FOSSASIA Labs</a></li>
-											<li><a target="_self" href="http://susi.ai">SUSI.AI</a></li>
-											<li><a target="_self" href="http://Eventyay.com">eventyay</a></li>
-											<li><a target="_self" href="http://loklak.org">loklak Social Search</a></li>
-											<li><a target="_self" href="http://susper.com">Susper Seach Engine</a></li>
-											<li><a target="_self" href="http://yaydoc.org">Yaydoc Document Generator</a></li>
-											<li><a target="_self" href="http://phimp.me">Phimp.me Image App</a></li>
+											<li><a target="_self" href="https://github.com/fossasia">在Github貢獻</a></li>
+											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">專案想法</a></li>
+											<li><a target="_self" href="http://labs.fossasia.org" target="_self">FOSSASIA 實驗室</a></li>
+											<li><a target="_self" href="http://susi.ai">SUSI.AI 智能語音助理</a></li>
+											<li><a target="_self" href="http://Eventyay.com">eventyay 開源活動平台服務</a></li>
+											<li><a target="_self" href="http://loklak.org">loklak 社交工具搜尋引擎</a></li>
+											<li><a target="_self" href="http://susper.com">Susper 搜尋引擎</a></li>
+											<li><a target="_self" href="http://yaydoc.org">Yaydoc 文件產生器</a></li>
+											<li><a target="_self" href="http://phimp.me">Phimp.me 影像APP</a></li>
 											<li><a target="_self" href="http://meilix.fossasia.org">Meilix Linux</a></li>
 											<li><a target="_self" href="http://pslab.fossasia.org/">Pocket Science Lab</a></li>
 											<li><a target="_self" href="https://query-server.herokuapp.com/">Query Server</a></li>
 											<li><a target="_self" href="http://knitting.fossasia.org/">Knitting Lab</a></li>
 											<li><a target="_self" href="https://badgeyay-dev.herokuapp.com/">Badgeyay</a></li>
-											<li><a target="_self" href="http://gci17.fossasia.org">Code-In 2017</a></li>
-											<li><a target="_self" href="http://gci16.fossasia.org">Code-In 2016</a></li>
-											<li><a target="_self" href="http://gci15.fossasia.org">Code-In 2015</a></li>
-											<li><a target="_self" href="http://gci14.fossasia.org">Code-In 2014</a></li>
+											<li><a target="_self" href="http://gci17.fossasia.org">Google Code-In 2017</a></li>
+											<li><a target="_self" href="http://gci16.fossasia.org">Google Code-In 2016</a></li>
+											<li><a target="_self" href="http://gci15.fossasia.org">Google Code-In 2015</a></li>
+											<li><a target="_self" href="http://gci14.fossasia.org">Google Code-In 2014</a></li>
 										</ul>
-									<li><a target="_self" class="inner-link" href="#subscribe">Subscribe</a></li>
-									<li><a target="_self" href="http://blog.fossasia.org">Blog</a></li>
-									<li class="has-dropdown"><a href="http://events.fossasia.org">Events</a>
+									<li><a target="_self" class="inner-link" href="#subscribe">訂閱</a></li>
+									<li><a target="_self" href="http://blog.fossasia.org">部落格</a></li>
+									<li class="has-dropdown"><a href="http://events.fossasia.org">活動</a>
 										<ul class="nav-dropdown events" style="min-height: 545px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
-											<li><a target="_self" href="http://events.fossasia.org/#sponsorship">Sponsorship</a></li>
-											<li><a target="_self" href="http://eventyay.com">FOSSASIA Event Management</a></li>
+											<li><a target="_self" href="http://events.fossasia.org/#sponsorship">贊助</a></li>
+											<li><a target="_self" href="http://eventyay.com">FOSSASIA 活動平台</a></li>
 											<li><a target="_self" href="http://sciencehack.asia">Science Hack Asia</a></li>
 											<li><a target="_self" href="http://sciencehack.in">Science Hack India</a></li>
 											<li><a target="_self" href="http://2018.fossasia.org">FOSSASIA Summit 2018</a></li>
 											<li><a target="_self" href="http://opentechsummit.cn">OpenTechSummit China</a></li>
 											<li><a target="_self" href="http://jugaadfest.com">Jugaadfest India</a></li>
-                      <li><a target="_self" href="http://2018.fossasia.org">FOSSASIA Summit 2018</a></li>
+                      						<li><a target="_self" href="http://2018.fossasia.org">FOSSASIA Summit 2018</a></li>
 											<li><a target="_self" href="http://2017.fossasia.org">FOSSASIA Summit 2017</a></li>
 											<li><a target="_self" href="http://2016.fossasia.org">FOSSASIA Summit 2016</a></li>
 											<li><a target="_self" href="http://2015.fossasia.org">FOSSASIA Summit 2015</a></li>
@@ -121,11 +121,11 @@
 											<li><a target="_self" href="http://2011.fossasia.org">FOSSASIA Summit 2011</a></li>
 											<li><a target="_self" href="http://2010.fossasia.org">FOSSASIA Summit 2010</a></li>
 											<li><a target="_self" href="http://2009.fossasia.org">GNOME.Asia 2009</a></li>
-											<li><a target="_self" href="http://coc.fossasia.org">Code of Conduct</a></li>
+											<li><a target="_self" href="http://coc.fossasia.org">行為準則（Code of Conduct）</a></li>
 										</ul>
 									</li>
-                  <li class="hidden-sm hidden-xs"><a href="https://2018.fossasia.org" target="_self">Summit 2018</a></li>
-									<li class="hidden-sm hidden-xs"><a target="_self" href="./donate/">Donate</a></li>
+                  					<li class="hidden-sm hidden-xs"><a href="https://2018.fossasia.org" target="_self">Summit 2018</a></li>
+									<li class="hidden-sm hidden-xs"><a target="_self" href="./donate/">贊助</a></li>
 									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://twitter.com/fossasia"><i class="icon social_twitter"></i></a></li>
 									<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://facebook.com/fossasia"><i class="icon social_facebook"></i></a></li>
       								<li class="social-link hidden-md hidden-sm hidden-xs"><a target="_self" href="https://github.com/fossasia"><i class="fa fa-github fa-lg"></i></a></li>
@@ -254,9 +254,9 @@
 							</div>
 
 							<div class="col-sm-8 col-md-4">
-								<h1>Join up with the Asian developer community and get a ticket for the FOSSASIA Summit 2018, 22-25 March in&nbsp;Singapore. </h1>
+								<h1>一同參加亞洲許多開發者社群的聚會，並購買票券：FOSSASIA Summit 2018 三月22~25，新加坡</h1>
 								<p>
-									Catch our community special and save off your ticket!
+									關注我們的社群有機會可以得到折扣票價！
 								</p>
 							</div>
 						</a>
@@ -267,9 +267,9 @@
 							</div>
 
 							<div class="col-sm-8 col-md-4">
-								<h1>Become a speaker at the FOSSASIA Summit 2018 in Singapore!</h1>
+								<h1>成為新加坡FOSSASIA Summit 2018的講者</h1>
 								<p>
-									Propose a talk or workshop in one of our tracks about Artificial Intelligence, Blockchain, Open Design, Internet Society and Policy, Open Hardware and many more.
+									申請演講或工作坊，議程內容建議包含人工智慧、區塊鏈、開放設計、網路社會政策、開放硬體、和更多。
 								</p>
 							</div>
 						</a>
@@ -296,7 +296,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12">
-								<h1>FOSSASIA Activities<br></h1>
+								<h1>FOSSASIA 活動<br></h1>
 							</div>
 						</div>
 						<div class="row">
