--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FOSSASIA | Asia's Open Technology Organization - Developing Open Source Software, Open Hardware, Open Design, Open Data, Open Knowledge</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>FOSSASIA | 亞洲開放科技組織：致力於發展開放原始碼軟體、開放硬體、開放設計、開放資料及開放知識</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="FOSSASIA - Developing Open Source Software and Hardware to improve people's lives. Solutions for Event Management, Artificial Intelligence, Big Data, Design Thinking and Free Knowledge Tools. FOSSASIA is Asia's Premier Open Technology Organization.">
         <meta name="keywords" content="Open Source, Development, FOSSASIA, FOSS, Free and Open Source Software, Asia">
         <meta name="author" content="FOSSASIA">
@@ -222,7 +221,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<img alt="FOSSASIA" class="logo" src="img/fossasia-squarewhite-path.png">
-									<h1 class="large-h1 text-white">持續開發自由的開放原始碼軟體及硬體，以及持續和地球上最具有前瞻思想的開放科技的創新者們及公司們協同合作</h1>
+									<h1 class="large-h1 text-white">持續開發自由的開放原始碼軟體及硬體，以及持續和地球上最具有前瞻思想，及開放技術的創新者們及公司協同合作</h1>
 								</div>
 							</div>
 						</div>
@@ -304,7 +303,7 @@
 								<div class="info-box">
 									<img alt="Venue" src="img/16704948658_0dff7bd62c_z.jpg">
 									<h3>Coding Programs<br></h3>
-									<p><div>FOSSASIA organizes local, regional and global developer trainings and coding contests. We also cooperate with partners in programs such as Google Summer of Code. Please join us and browse our open issues, mini-projects and GSoC ideas.</div><div><br><br></div></p>
+									<p><div>FOSSASIA 組織本地、區域性，以及跨國的程式開發者訓練和程式比賽，我們也會和專案諸的夥伴合作，如Google Summer of Code（GSoC）。請加入我們並瀏覽專案中還沒解決的問題，小型專案，以及在GSoC的概念想法。</div><div><br><br></div></p>
 									<div class="text-link">
 										<a href="http://labs.fossasia.org/ideas.html" target="_self">Read about project ideas</a>
 									</div>
@@ -313,8 +312,8 @@
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
 									<img alt="Venue" src="img/16685244587_dc6defba93_z.jpg">
-									<h3>Developer Meetups and Conferences<br></h3>
-									<p>The FOSSASIA Open Tech Summit takes place once a year. We organize Science Hack Days and regular meetups throughout Asia from Beijing, Saigon, Singapore to Dubai. Please join our events or start a group in your region.<div><br></div><div></div></p>
+									<h3>開發者聚會，以及大型會議<br></h3>
+									<p>FOSSASIA 開放技術高峰會（OpenTech Summit）已經舉辦了好幾年，我們組織了Science Hack Days，和在亞洲各地如北京、胡志明市、新加坡和杜拜舉辦了一般聚會。請加入我們的活動，或是在你的城市中開始組織FOSSASIA的社群。<div><br></div><div></div></p>
 									<div class="text-link">
 									<a href="http://2018.fossasia.org" target="_self">Join the FOSSASIA Summit</a>
 									</div>
@@ -323,10 +322,10 @@
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
 									<img alt="Venue" src="img/16684326949_3f300eacf7_z.jpg">
-									<h3>Software and Hardware Development</h3>
-									<p>We develop applications for Science hack labs, software programs for events, community engagement and open data tools, and we support existing projects with resources. Visit FOSSASIA Labs for more info.<div><br></div><div><br></div></p>
+									<h3>軟體及硬體開發</h3>
+									<p>我們發展了科學駭客實驗室（Science hack labs）的計畫、活動程式軟體、締結社群、以及開放資料工具等，我們也支持已存在且有資源的專案，請瀏覽FOSSASIA Labs了解更多訊息。<div><br></div><div><br></div></p>
 									<div class="text-link">
-										<a href="https://github.com/fossasia" target="_self">Contribute to our projects on GitHub</a>
+										<a href="https://github.com/fossasia" target="_self">在Github上一起貢獻我們的專案</a>
 									</div>
 								</div>
 							</div>
