--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FOSSASIA | 亞洲開放科技組織：致力於發展開放原始碼軟體、開放硬體、開放設計、開放資料及開放知識</title>
+        <title>FOSSASIA | 亞洲開放科技社群：致力於發展開放原始碼軟體、開放硬體、開放設計、開放資料及開放知識</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="FOSSASIA - Developing Open Source Software and Hardware to improve people's lives. Solutions for Event Management, Artificial Intelligence, Big Data, Design Thinking and Free Knowledge Tools. FOSSASIA is Asia's Premier Open Technology Organization.">
         <meta name="keywords" content="Open Source, Development, FOSSASIA, FOSS, Free and Open Source Software, Asia">
@@ -70,6 +70,7 @@
 											<li><a target="_self" href="./about#background">背景 & 任務</a></li>
 											<li><a target="_self" href="./licenses">授權</a></li>
 											<li><a target="_self" href="./team">團隊</a></li>
+											<li><a target="_self" href="./team">行為準則</a></li>
 										</ul>
 									<li class="has-dropdown"><a href="./apply.html">申請</a>
 										<ul class="nav-dropdown" style="min-height: 175px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
@@ -80,7 +81,8 @@
 											<li><a target="_self" href="/adp">進階開發者計畫</a></li>
 										</ul>
 									<li class="has-dropdown"><a href="http://labs.fossasia.org/#projects">計畫</a>
-               					     <ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
+										<ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
+											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">如何參與FOSSASIA的社群</a></li>
 											<li><a target="_self" href="https://github.com/fossasia">在Github貢獻</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">專案想法</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org" target="_self">FOSSASIA 實驗室</a></li>
@@ -120,7 +122,7 @@
 											<li><a target="_self" href="http://2011.fossasia.org">FOSSASIA Summit 2011</a></li>
 											<li><a target="_self" href="http://2010.fossasia.org">FOSSASIA Summit 2010</a></li>
 											<li><a target="_self" href="http://2009.fossasia.org">GNOME.Asia 2009</a></li>
-											<li><a target="_self" href="http://coc.fossasia.org">行為準則（Code of Conduct）</a></li>
+											<li><a target="_self" href="./coc/">行為準則（Code of Conduct）</a></li>
 										</ul>
 									</li>
                   					<li class="hidden-sm hidden-xs"><a href="https://2018.fossasia.org" target="_self">Summit 2018</a></li>
@@ -144,16 +146,18 @@
 						<div class="widget">
 							<ul class="menu">
 								<li><a class="inner-link" href="#top">Home</a></li>
-								<li><a href="./about" target="_self">About</a></li>
-								<li><a href="http://eventyay.com" target="_self">Event Management</a></li>
-								<li><a class="inner-link" href="#labs" target="_self">Labs &amp; Code</a></li>
-								<li><a href="http://github.com/fossasia" target="_self">Contribute</a></li>
+								<li><a href="./about" target="_self">關於</a></li>
+								<li><a href="http://eventyay.com" target="_self">活動網站</a></li>
+								<li><a class="inner-link" href="#labs" target="_self">實驗室 &amp; 程式碼</a></li>
+								<li><a href="http://github.com/fossasia" target="_self">在Github的貢獻</a></li>
 								<!-- <li><a class="inner-link" href="#support" target="_self">Support</a></li><li><a class="inner-link" href="#subscribe" target="_self">Subscribe</a></li> -->
 								<li><a href="http://2018.fossasia.org" target="_self">FOSSASIA Summit'18</a></li>
-								<li><a href="http://blog.fossasia.org" target="_self">Blog</a></li>
+								<li><a href="http://blog.fossasia.org" target="_self">部落格</a></li>
 								<li><a href="./donate/" target="self">Donate</a></li>
 								<li><a href="https://groups.google.com/group/fossasia" target="_self">Mailing List</a></li>
 								<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>
+								<li><a href="https://coc.fossasia.org/" target="_self">Code of Conduct</a></li>
+								<li><a href="./coc/" target="_self">行為準則</a></li>
 							</ul>
 						</div>
 
