--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										</ul>
 									<li class="has-dropdown"><a href="http://labs.fossasia.org/#projects">計畫</a>
 										<ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
-											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">如何參與FOSSASIA的社群</a></li>
+											<li><a target="_self" href="/how-join-fossasia-community/">如何參與FOSSASIA的社群</a></li>
 											<li><a target="_self" href="https://github.com/fossasia">在Github貢獻</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">專案想法</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org" target="_self">FOSSASIA 實驗室</a></li>
@@ -122,7 +122,7 @@
 											<li><a target="_self" href="http://2011.fossasia.org">FOSSASIA Summit 2011</a></li>
 											<li><a target="_self" href="http://2010.fossasia.org">FOSSASIA Summit 2010</a></li>
 											<li><a target="_self" href="http://2009.fossasia.org">GNOME.Asia 2009</a></li>
-											<li><a target="_self" href="./coc/">行為準則（Code of Conduct）</a></li>
+											<li><a target="_self" href="/coc/">行為準則（Code of Conduct）</a></li>
 										</ul>
 									</li>
                   					<li class="hidden-sm hidden-xs"><a href="https://2018.fossasia.org" target="_self">Summit 2018</a></li>
@@ -157,7 +157,7 @@
 								<li><a href="https://groups.google.com/group/fossasia" target="_self">Mailing List</a></li>
 								<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>
 								<li><a href="https://coc.fossasia.org/" target="_self">Code of Conduct</a></li>
-								<li><a href="./coc/" target="_self">行為準則</a></li>
+								<li><a href="/coc/" target="_self">行為準則</a></li>
 							</ul>
 						</div>
 
