--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										</ul>
 									<li class="has-dropdown"><a href="http://labs.fossasia.org/#projects">計畫</a>
 										<ul class="nav-dropdown projects" style="min-height: 590px"> <!--whenever you add/remove an option, change the style="min-height:500px" by +- 25px-->
-											<li><a target="_self" href="/how-join-fossasia-community/">如何參與FOSSASIA的社群</a></li>
+											<li><a target="_self" href="./how-join-fossasia-community/">如何參與FOSSASIA的社群</a></li>
 											<li><a target="_self" href="https://github.com/fossasia">在Github貢獻</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org/ideas.html">專案想法</a></li>
 											<li><a target="_self" href="http://labs.fossasia.org" target="_self">FOSSASIA 實驗室</a></li>
