--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											<li><a target="_self" href="./about#background">背景 & 任務</a></li>
 											<li><a target="_self" href="./licenses">授權</a></li>
 											<li><a target="_self" href="./team">團隊</a></li>
-											<li><a target="_self" href="./team">行為準則</a></li>
+											<li><a target="_self" href="./coc">行為準則</a></li>
 										</ul>
 									<li class="has-dropdown"><a href="./apply.html">申請</a>
 										<ul class="nav-dropdown" style="min-height: 175px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
@@ -103,7 +103,8 @@
 											<li><a target="_self" href="http://gci14.fossasia.org">Google Code-In 2014</a></li>
 										</ul>
 									<li><a target="_self" class="inner-link" href="#subscribe">訂閱</a></li>
-									<li><a target="_self" href="http://blog.fossasia.org">部落格</a></li>
+									<li><a target="_self" href="https://blog.fossasia.org">部落格</a></li>
+									<li><a target="_self" href="https://calendar.fossasia.org/">行事曆</a></li>
 									<li class="has-dropdown"><a href="http://events.fossasia.org">活動</a>
 										<ul class="nav-dropdown events" style="min-height: 545px"> <!--whenever you add/remove an option, change the style="min-height:425px" by +- 25px-->
 											<li><a target="_self" href="http://events.fossasia.org/#sponsorship">贊助</a></li>
@@ -122,7 +123,7 @@
 											<li><a target="_self" href="http://2011.fossasia.org">FOSSASIA Summit 2011</a></li>
 											<li><a target="_self" href="http://2010.fossasia.org">FOSSASIA Summit 2010</a></li>
 											<li><a target="_self" href="http://2009.fossasia.org">GNOME.Asia 2009</a></li>
-											<li><a target="_self" href="/coc/">行為準則（Code of Conduct）</a></li>
+											<li><a target="_self" href="./coc/">行為準則（Code of Conduct）</a></li>
 										</ul>
 									</li>
                   					<li class="hidden-sm hidden-xs"><a href="https://2018.fossasia.org" target="_self">Summit 2018</a></li>
@@ -157,7 +158,7 @@
 								<li><a href="https://groups.google.com/group/fossasia" target="_self">Mailing List</a></li>
 								<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>
 								<li><a href="https://coc.fossasia.org/" target="_self">Code of Conduct</a></li>
-								<li><a href="/coc/" target="_self">行為準則</a></li>
+								<li><a href="./coc/" target="_self">行為準則</a></li>
 							</ul>
 						</div>
 
